feat: add font gilroy

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,14 @@
   --foreground: #171717;
 }
 
+@font-face {
+  font-family: 'Gilroy';
+  src: url('/fonts/Gilroy-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
