--- a/src/app/style/HeroText.module.css
+++ b/src/app/style/HeroText.module.css
@@ -11,6 +11,7 @@
 .hero-title {
   position: relative;
   font-size: 3.7rem;
+  font-family: 'Gilroy', sans-serif;
   font-weight: bold;
   margin: 0;
   color: #1e1e1e;
