--- a/src/app/style/HeroText.module.css
+++ b/src/app/style/HeroText.module.css
@@ -15,10 +15,8 @@
   font-weight: bold;
   margin: 0;
   color: #1e1e1e;
-  width: 100%;
+  width: 70%;
   align-items: center;
-  display: flex;
-  justify-content: center;
   line-height: 1.1;
   z-index: 1;
 }
@@ -51,8 +49,32 @@
     font-size: 16px;
     margin: 10px 0 40px;
     align-items: center;
-    width: 80%;
+    width: 70%;
   }
+
+
+.underline {
+  position: relative;
+  display: inline-block;
+}
+
+.underline::after {
+  content: '';
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  width: 100%;
+  height: 20px;
+  background: 
+    linear-gradient(to right, transparent 0%, #6a9dfc 30%, #457bed 70%, transparent 100%),
+    linear-gradient(to right, transparent 0%, #6a9dfc 30%, #457bed 70%, transparent 100%);
+  background-size: 100% 4px, 100% 3px;
+  background-position: 0 5px, 0 12px;
+  background-repeat: no-repeat;
+  pointer-events: none;
+  z-index: -1;
+  opacity: 1;
+}
 
   .search-section {
     display: flex;
