--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,19 @@
 @import "tailwindcss";
 
+/* Thèmes clairs et sombres */
 :root {
-  --background: #ffffff;
   --foreground: #171717;
+  --background-gradient: linear-gradient(to bottom right, #F5F5F4, #EAEAEA);
 }
 
+/** @media (prefers-color-scheme: dark) {
+  :root {
+    --foreground: #ededed;
+    --background-gradient: linear-gradient(to bottom right, #0a0a0a, #1a1a1a);
+  }
+} */
+
+/* Police personnalisée */
 @font-face {
   font-family: 'Gilroy';
   src: url('/fonts/Gilroy-Bold.ttf') format('truetype');
@@ -13,22 +22,17 @@
   font-display: swap;
 }
 
+/* Thème inline (optionnel selon setup) */
 @theme inline {
-  --color-background: var(--background);
+  --color-background: var(--background-gradient);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  background: var(--background);
+  background: var(--background-gradient);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family:  Arial, sans-serif;
+  margin: 0;
 }
