--- a/src/app/style/Blob.module.css
+++ b/src/app/style/Blob.module.css
@@ -1,22 +1,23 @@
 .container {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-  }
-  
-  .blobWrapper {
-    position: relative;
-    width: 410px;
-    height: 410px;
-  }
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.blobWrapper {
+  position: relative;
+  width: 410px;
+  height: 410px;
+  z-index: 2;
+}
+
   
   .blob {
     width: 100%;
     height: 100%;
     position: relative;
-    background: radial-gradient(circle at 30% 30%, #ffffff33, #00000011);
     border-radius: 60% 40% 60% 40% / 50% 50% 60% 40%;
     animation: morph 8s ease-in-out infinite;
     box-shadow:
@@ -84,27 +85,27 @@
 }
 
 .infoBoxTopLeft {
-  top: 20px;
-  left: -120px;
+  top: 5%;
+  left: -15%;
   --rotate-angle: -5deg;
 }
 
 
 .infoBoxBottomLeft {
-  bottom: 50px;
-  left: -120px;
+  bottom: 4%;
+  left: -15%;
   --rotate-angle: 4deg;
 }
 
 .infoBoxTopRight {
-  top: -30px;
-  right: -120px;
+  top: -5%;
+  right: -18%;
   --rotate-angle: 3deg;
 }
 
 .infoBoxBottomRight {
-  bottom: 200px;
-  right: -120px;
+  bottom: 45%;
+  right: -18%;
   --rotate-angle: -4deg;
 }
 
@@ -136,4 +137,14 @@
       transform: rotate(360deg);
     }
   }
+
+  @media (max-width: 768px) {
+  .infoBoxTopLeft,
+  .infoBoxBottomLeft,
+  .infoBoxTopRight,
+  .infoBoxBottomRight {
+    display: none;
+  }
+}
+
   
