--- a/src/app/style/MyRequestCard.module.css
+++ b/src/app/style/MyRequestCard.module.css
@@ -1,11 +1,16 @@
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 1.5rem;
+  margin-top: 1rem;
+}
+
 .card {
+  position: relative;
   background-color: white;
   border-radius: 1.5rem;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
   padding: 1.5rem;
-  max-width: 30%;
-  margin: auto;
   display: flex;
   flex-direction: column;
 }
@@ -14,14 +19,14 @@
   width: 100%;
   object-fit: cover;
   margin-bottom: 1rem;
-  height: 100%;
+  height: auto;
 }
 
 .subTitle {
   color: #555;
   font-size: 0.9rem;
   margin-bottom: 0.5rem;
-}S
+}
 
 .details {
   font-size: 0.85rem;
